# devdiary

./: .angular-cli.json  .gitignore  .travis.yml  README.md  index.html  package.json  tsconfig.json
devdiary-backend/: .gitignore  Cargo.toml  conf.toml
devdiary-backend/src/: config_trait.rs  main.rs
devdiary-backend/src/server/: mod.rs
e2e/: app.e2e-spec.ts  app.po.ts
mockup/: index.html
mockup/css/: style.css
src/: index.html
src/app/: app.module.ts
src/app/services/: config.service.ts  login.service.spec.ts  login.service.ts
